--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
+    "gulp": "^4.0.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-cssmin": "^0.2.0",
     "nodemon": "^2.0.22"
   }
 }
