--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Andrew Butler",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "bulma": "^0.9.4",
