--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "upgrade-quiz-app",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "server.js",
   "scripts": {
@@ -8,12 +8,13 @@
     "dev": "nodemon server.js"
   },
   "author": "Andrew Butler",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "bulma": "^0.9.4",
+    "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
