--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
+    "method-override": "^3.0.0",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.3",
     "multer": "^1.4.5-lts.1",
