--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "gulp": "^4.0.2",
